dev:
  * allow strings for length and overlap option in correlate config
  * fix: correctly plot gaps in corr_vs_time and sim_mat plots
  * fix: downsample now defaults to None (previous default: 10)
v0.1.2:
  * fix: remove_response option was not working
v0.1.0:
  * initial release