@@ -1,4 +1,5 @@
 dev:
+  * corr_vs_time plot: allow to plot stack at top
   * allow strings for length and overlap option in correlate config
   * fix: correctly plot gaps in corr_vs_time and sim_mat plots
   * fix: downsample now defaults to None (previous default: 10)
